# VoxelGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  Voxel.sln  readme.md  vcpkg-configuration.json  vcpkg.json
Voxel/: Voxel.vcxproj  Voxel.vcxproj.filters  camera.cpp  camera.h  chunk.cpp  chunk.h  chunk_map.cpp  chunk_map.h  chunk_renderer.cpp  chunk_renderer.h  default_shader.frag  default_shader.vert  glad.c  input_manager.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  resource_manager.h  shader.cpp  shader.h  texture.cpp
include/: camera.h  game_application.h  game_window.h  input_manager.h  input_states.h  resource_loader.h  resource_manager.h
include/glad/: glad.h
include/graphics/: chunk_map_renderer.h  chunk_mesh.h  font_renderer.h  line_renderer.h  mesh.h  shader.h  texture.h  texture_atlas.h  world_render_options.h  world_renderer.h
include/utils/: algorithms.h  blocking_deque.h  blocking_queue.h  direction_utils.h  geometry.h  glm_hash.h
include/world/: block_data.h  chunk.h  chunk_generation_state.h  chunk_map.h  chunk_queue_node.h  chunk_snapshot.h  terrain_generator.h  world.h
res/: batch2d.vert  block_select.vert  sky_color.frag  sky_color.vert  terrain_chunk.frag
res/shaders/: batch2d.frag  block_select.frag  font_renderer.frag  font_renderer.vert  font_renderer_billboard.vert  line_renderer.frag  line_renderer.vert  screen_quad.frag  sky_color.frag  terrain_chunk.frag  terrain_chunk.vert
src/: camera.cpp  game_application.cpp  game_window.cpp  input_manager.cpp  main.cpp  resource_loader.cpp  resource_manager.cpp
(+34 files in other folders)
